# LiteLoaderMods

./: .gitignore  .gitmodules  CMakeLists.txt  LiteLoaderMods.sln  go.mod
PacketDumper/: CMakeLists.txt  PacketDumper.vcxproj  PacketDumper.vcxproj.filters  dllmain.cpp
PacketDumper/GolangHandler/: MinecraftPacket.go  PacketHandler.h  PacketPool.go  cgo.h  go.mod  go.sum
Shared/Lib/: SymDBHelper.lib
WebsocketServer/: CMakeLists.txt  MemoryModule.c  bdxws.cpp  bdxws.rc  bdxws.vcxproj  bdxws.vcxproj.filters  dllmain.cpp  encrypt_helper.h  resource.h
WebsocketServer/golang/: LibWebsocket.h  build.bat  cgoMain.h  encrypt.go  go.mod  websocket.go
WebsocketServer/golang/test/: main.go  main.h
assets/LiteLoader/websocket/: config.json
